src/objects/Form_Section__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Label__c</fullName>
        <description>First create a Custom Label in Setup&gt;&gt;Custom Labels. Then input the Name of the previously created custom label.</description>
        <label>Custom Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Sections</relationshipLabel>
        <relationshipName>Form_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form Section</label>
    <nameField>
        <label>Form Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Blank_Spaces_in_Form_Custom_Label</fullName>
        <active>true</active>
        <description>Enter the Name of a previously created Custom Label only.</description>
        <errorConditionFormula>CONTAINS(Custom_Label__c , &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Custom_Label__c</errorDisplayField>
        <errorMessage>Ensure there are no blank spaces in custom label field</errorMessage>
    </validationRules>
</CustomObject>